[project]
name = "restoration-studio-worker"
version = "1.0.0"
description = "Durable personal media restoration worker"
requires-python = ">=3.11"
dependencies = [
  "httpx==0.28.1",
  "python-dotenv==1.1.1",
  "opencv-python-headless==4.12.0.88",
  "numpy==2.2.6",
]

[project.scripts]
restoration-worker = "restoration_worker.main:main"
